{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 350,
  "lineage": "3fcff34f-df18-fa78-7f28-12e009e19954",
  "resources": [
    {
      "module": "module.airflow",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:956435550935:instance/i-094bbdea2a910f533",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-011a4ab91948fbf17",
                "volume_size": 10,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094bbdea2a910f533",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-us-d-airflow-keys",
            "launch_template": [
              {
                "id": "lt-0e1ceb792451c27b5",
                "name": "aws-us-d-airflow-linux-machine-templates",
                "version": "$Default"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c215b4fd76d8288",
            "private_dns": "ip-172-31-23-15.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.15",
            "public_dns": "ec2-3-80-220-234.compute-1.amazonaws.com",
            "public_ip": "3.80.220.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01859bd67ee51c428",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "aws-us-d-airflow-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04641fc4dd0f66bc0",
            "tags": {
              "Name": "aws-us-d-airflow-instance-0",
              "image": "ubuntu",
              "script": "airflow-init"
            },
            "tags_all": {
              "Name": "aws-us-d-airflow-instance-0",
              "image": "ubuntu",
              "script": "airflow-init"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d8b17fbc197b9073"
            ]
          },
          "dependencies": [
            "data.template_file.airflow-script",
            "data.template_file.ssh-airflow-priv",
            "data.template_file.ssh-airflow-pub",
            "module.airflow.aws_key_pair.instance-key",
            "module.airflow.aws_launch_template.linux",
            "module.airflow.aws_security_group.instance-sg"
          ]
        }
      ]
    },
    {
      "module": "module.airflow",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:956435550935:security-group/sg-0d8b17fbc197b9073",
            "description": "Allow MYIP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8b17fbc197b9073",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.37.128.45/32"
                ],
                "description": "HTTP from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "49.37.128.45/32"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "connecting DATABASE and VM",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a58176a98d6feff0"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "aws-us-d-airflow-sg",
            "name_prefix": "",
            "owner_id": "956435550935",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "airflow-security-group"
            },
            "tags_all": {
              "Name": "airflow-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-035421cb609afc552"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:956435550935:instance/i-00e551c355c693931",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-073804c9cf50c4d65",
                "volume_size": 10,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e551c355c693931",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-us-d-Jenkins-keys",
            "launch_template": [
              {
                "id": "lt-085a16b12fc150abb",
                "name": "aws-us-d-Jenkins-linux-machine-templates",
                "version": "$Default"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04e73627d0d136b6c",
            "private_dns": "ip-172-31-28-41.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.28.41",
            "public_dns": "ec2-50-19-75-112.compute-1.amazonaws.com",
            "public_ip": "50.19.75.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ca9ae7637eead84a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "aws-us-d-Jenkins-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04641fc4dd0f66bc0",
            "tags": {
              "Name": "aws-us-d-Jenkins-instance-0",
              "image": "ubuntu",
              "script": "Jenkins-init"
            },
            "tags_all": {
              "Name": "aws-us-d-Jenkins-instance-0",
              "image": "ubuntu",
              "script": "Jenkins-init"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-077fd6b4f52350a45"
            ]
          },
          "dependencies": [
            "data.template_file.jenkins-script",
            "data.template_file.ssh-airflow-priv",
            "data.template_file.ssh-airflow-pub",
            "module.jenkins.aws_key_pair.instance-key",
            "module.jenkins.aws_launch_template.linux",
            "module.jenkins.aws_security_group.instance-sg"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:956435550935:security-group/sg-077fd6b4f52350a45",
            "description": "Allow MYIP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077fd6b4f52350a45",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.37.128.45/32"
                ],
                "description": "HTTP from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "49.37.128.45/32"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "connecting DATABASE and VM",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a58176a98d6feff0"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "aws-us-d-Jenkins-sg",
            "name_prefix": "",
            "owner_id": "956435550935",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "airflow-security-group"
            },
            "tags_all": {
              "Name": "airflow-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-035421cb609afc552"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}